; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_create_source_function.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_function.c_create_source_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { %struct.TYPE_5__, %struct.TYPE_6__*, i32*, i32* }
%struct.TYPE_5__ = type { i32, i32 }

@InterpretedFunctionVtbl = common dso_local global i32 0, align 4
@PROPF_CONSTR = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@prototypeW = common dso_local global i32 0, align 4
@PROPF_WRITABLE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_source_function(i32* %0, i32* %1, %struct.TYPE_6__* %2, i32* %3, i32** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca %struct.TYPE_7__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32** %4, i32*** %11, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @create_object(i32* %15, i32* null, i32** %13)
  store i32 %16, i32* %14, align 4
  %17 = load i32, i32* %14, align 4
  %18 = call i64 @FAILED(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %5
  %21 = load i32, i32* %14, align 4
  store i32 %21, i32* %6, align 4
  br label %99

22:                                               ; preds = %5
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* @PROPF_CONSTR, align 4
  %25 = load i32, i32* @FALSE, align 4
  %26 = bitcast %struct.TYPE_7__** %12 to i8**
  %27 = call i32 @create_function(i32* %23, i32* null, i32* @InterpretedFunctionVtbl, i32 32, i32 %24, i32 %25, i32* null, i8** %26)
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %14, align 4
  %29 = call i64 @SUCCEEDED(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %60

31:                                               ; preds = %22
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  %35 = load i32, i32* @prototypeW, align 4
  %36 = load i32, i32* @PROPF_WRITABLE, align 4
  %37 = load i32*, i32** %13, align 8
  %38 = call i32 @jsval_obj(i32* %37)
  %39 = call i32 @jsdisp_define_data_property(i32* %34, i32 %35, i32 %36, i32 %38)
  store i32 %39, i32* %14, align 4
  %40 = load i32, i32* %14, align 4
  %41 = call i64 @SUCCEEDED(i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %50

43:                                               ; preds = %31
  %44 = load i32*, i32** %7, align 8
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %46 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 0
  %48 = load i32*, i32** %13, align 8
  %49 = call i32 @set_constructor_prop(i32* %44, i32* %47, i32* %48)
  store i32 %49, i32* %14, align 4
  br label %50

50:                                               ; preds = %43, %31
  %51 = load i32, i32* %14, align 4
  %52 = call i64 @FAILED(i32 %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %59

54:                                               ; preds = %50
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %56, i32 0, i32 0
  %58 = call i32 @jsdisp_release(i32* %57)
  br label %59

59:                                               ; preds = %54, %50
  br label %60

60:                                               ; preds = %59, %22
  %61 = load i32*, i32** %13, align 8
  %62 = call i32 @jsdisp_release(i32* %61)
  %63 = load i32, i32* %14, align 4
  %64 = call i64 @FAILED(i32 %63)
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %66, label %68

66:                                               ; preds = %60
  %67 = load i32, i32* %14, align 4
  store i32 %67, i32* %6, align 4
  br label %99

68:                                               ; preds = %60
  %69 = load i32*, i32** %10, align 8
  %70 = icmp ne i32* %69, null
  br i1 %70, label %71, label %77

71:                                               ; preds = %68
  %72 = load i32*, i32** %10, align 8
  %73 = call i32 @scope_addref(i32* %72)
  %74 = load i32*, i32** %10, align 8
  %75 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %76 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %75, i32 0, i32 3
  store i32* %74, i32** %76, align 8
  br label %77

77:                                               ; preds = %71, %68
  %78 = load i32*, i32** %8, align 8
  %79 = call i32 @bytecode_addref(i32* %78)
  %80 = load i32*, i32** %8, align 8
  %81 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %82 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %81, i32 0, i32 2
  store i32* %80, i32** %82, align 8
  %83 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %84 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %85 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %84, i32 0, i32 1
  store %struct.TYPE_6__* %83, %struct.TYPE_6__** %85, align 8
  %86 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %87 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %86, i32 0, i32 1
  %88 = load %struct.TYPE_6__*, %struct.TYPE_6__** %87, align 8
  %89 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %88, i32 0, i32 0
  %90 = load i32, i32* %89, align 4
  %91 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %92 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %91, i32 0, i32 0
  %93 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %92, i32 0, i32 1
  store i32 %90, i32* %93, align 4
  %94 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %95 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %94, i32 0, i32 0
  %96 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %95, i32 0, i32 0
  %97 = load i32**, i32*** %11, align 8
  store i32* %96, i32** %97, align 8
  %98 = load i32, i32* @S_OK, align 4
  store i32 %98, i32* %6, align 4
  br label %99

99:                                               ; preds = %77, %66, %20
  %100 = load i32, i32* %6, align 4
  ret i32 %100
}

declare dso_local i32 @create_object(i32*, i32*, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @create_function(i32*, i32*, i32*, i32, i32, i32, i32*, i8**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @jsdisp_define_data_property(i32*, i32, i32, i32) #1

declare dso_local i32 @jsval_obj(i32*) #1

declare dso_local i32 @set_constructor_prop(i32*, i32*, i32*) #1

declare dso_local i32 @jsdisp_release(i32*) #1

declare dso_local i32 @scope_addref(i32*) #1

declare dso_local i32 @bytecode_addref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
